--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "firebase": "^5.5.9",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuefire": "^2.0.0-alpha.16"
