--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "firebase": "^5.5.9",
-    "validation": "^0.0.1",
+    "validator": "^10.9.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuefire": "^2.0.0-alpha.16"
